PA-15204: WIP Refactor dns resolver so we can use DNSSEC